Added input validation to names

--- a/index.html
+++ b/index.html
@@ -16,8 +16,11 @@
     <div id="content">
         <div id="content-header">
             <h3>
-                Drop the names you'd like to bunch up!
+                Drop the all the names you'd like to bunch up!
+                <br>
+                Separate each name with a space.
             </h3>
+
         </div>
         <div id="name">
             <label for="name-input">Name</label>
