Added multiline text wrapping and allows for multiname inputs

--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
         </div>
         <div id="name">
             <label for="name-input">Name</label>
-            <input type="text" id="name-input">
+            <textarea name="" wrap="hard" id="name-input" cols="20" rows="2"></textarea>
         </div>
         <div onclick="addName()" id="add-button">
             <button class="button" type="submit" id="add">Add</button>
