Implement dynamic column layout for name cards

--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
             <button class="button" type="submit" id="add">Add</button>
         </div>
 
-        <div id="names-list"> </div>
+        <ul id="names-list"></ul>
 
     <a href="groups.html"></a>
     </div>
