--- a/groups.html
+++ b/groups.html
@@ -4,7 +4,7 @@
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
         <title>Crew Creator</title>
         <link rel="stylesheet" href="./styles/styles.css">
-        <script defer src="./js/app.js"></script>
+        <script defer src="./js/groups.js"></script>
     </head>
 
     <body>
