Allow users to pick to group by number of people per group or number of groups

--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
     <a href="groups.html"></a>
     </div>
     <div id="next">
-        <a href="groups.html">
+        <a href="groupBy.html">
             <button id="next-button" class="button" type="button">Next</button>
         </a>
     </div>
