--- a/groupBy.html
+++ b/groupBy.html
@@ -17,7 +17,7 @@
             </h3>
         </div>
         <div id="content">
-            <a href="groupsByPeople.html">
+            <a href="groupByPeople.html">
                 <button class="button"> By number of people </button>
             </a>
             <a href="groups.html">
