--- a/groups.html
+++ b/groups.html
@@ -35,6 +35,11 @@
                                 // Set the innerHTML of the container to the namesText
                                 container.innerHTML = namesText;
                             });
+      
+                            namesText += "<br>";
+                            namesText += "<br>";
+                            namesText += " There are " + sessionNames.length + " people listed.";
+                            container.innerHTML = namesText;
                         </script>
                     </div>
                 </h3>
