Added functionallity for family christmas party

--- a/groupByPeople.html
+++ b/groupByPeople.html
@@ -48,6 +48,7 @@
                 <h3>
                     How many poeple would you like in each group?
                 </h3>
+                <h4>If you see a bold name that person will have to go twice for groups to be even.</h4>
             </div>
             <div id="Groups">
                 <label for="group-input">Number of people per group:</label>
