--- a/index.html
+++ b/index.html
@@ -18,13 +18,13 @@
             <h3>
                 Drop the all the names you'd like to bunch up!
                 <br>
-                Separate each name with a space.
+                Separate each name with a comma or individually.
             </h3>
 
         </div>
         <div id="name">
             <label for="name-input">Name</label>
-            <textarea name="" wrap="hard" id="name-input" cols="20" rows="2"></textarea>
+            <textarea name="" wrap="hard" id="name-input" cols="20" rows="4"></textarea>
         </div>
         <div onclick="addName()" id="add-button">
             <button class="button" type="submit" id="add">Add</button>
